plugins/kotlin/idea/tests/testData/highlighterMetaInfo/diagnostics/classRedeclaration.kt.highlighting.k2
// KTIJ-24026
// ALLOW_ERRORS
// CHECK_SYMBOL_NAMES
// HIGHLIGHTER_ATTRIBUTES_KEY

class <!HIGHLIGHTING("severity='SYMBOL_TYPE_SEVERITY'; highlightingTextAttributesKey='KOTLIN_CLASS'")!>ClassB<!> {}

class <!HIGHLIGHTING("severity='ERROR'; descr='[CLASSIFIER_REDECLARATION] Redeclaration: class ClassA : ClassB'; highlightingTextAttributesKey='ERRORS_ATTRIBUTES'"), HIGHLIGHTING("severity='SYMBOL_TYPE_SEVERITY'; highlightingTextAttributesKey='KOTLIN_CLASS'")!>ClassA<!>: <!HIGHLIGHTING("severity='ERROR'; descr='[FINAL_SUPERTYPE] This type is final, so it cannot be extended.'; highlightingTextAttributesKey='ERRORS_ATTRIBUTES'"), HIGHLIGHTING("severity='SYMBOL_TYPE_SEVERITY'; highlightingTextAttributesKey='KOTLIN_CONSTRUCTOR'")!>ClassB<!>() {}
class <!HIGHLIGHTING("severity='ERROR'; descr='[CLASSIFIER_REDECLARATION] Redeclaration: class ClassA : ClassB'; highlightingTextAttributesKey='ERRORS_ATTRIBUTES'"), HIGHLIGHTING("severity='SYMBOL_TYPE_SEVERITY'; highlightingTextAttributesKey='KOTLIN_CLASS'")!>ClassA<!>: <!HIGHLIGHTING("severity='ERROR'; descr='[FINAL_SUPERTYPE] This type is final, so it cannot be extended.'; highlightingTextAttributesKey='ERRORS_ATTRIBUTES'"), HIGHLIGHTING("severity='SYMBOL_TYPE_SEVERITY'; highlightingTextAttributesKey='KOTLIN_CONSTRUCTOR'")!>ClassB<!>() {}
